v.0.0.0.1 mbm2png; add :FOR[FTLDriveContinued] to patches

--- a/GameData/FTLDriveContinued/Parts/RSS_patch.cfg
+++ b/GameData/FTLDriveContinued/Parts/RSS_patch.cfg
@@ -1,7 +1,7 @@
-@PART[advancedFTLdrive*]:NEEDS[RealSolarSystem&!SSRSS]
+@PART[advancedFTLdrive*]:NEEDS[RealSolarSystem&!SSRSS]:FOR[FTLDriveContinued]
 {
-    @MODULE[FTLDriveModule]
-    {
-        @maxGeneratorForce *= 3
-    }
+	@MODULE[FTLDriveModule]
+	{
+		@maxGeneratorForce *= 3
+	}
 }
