--- a/GameData/FTLDriveContinued/Parts/TweakScale_patch.cfg
+++ b/GameData/FTLDriveContinued/Parts/TweakScale_patch.cfg
@@ -12,7 +12,7 @@ TWEAKSCALEEXPONENTS
 	name = FTLBeaconModule
 }
 
-@PART[ftlContBcnPlus]:NEEDS[TweakScale]
+@PART[ftlContBcnPlus]:NEEDS[TweakScale]:FOR[FTLDriveContinued]
 {
 	MODULE
 	{
@@ -22,7 +22,7 @@ TWEAKSCALEEXPONENTS
 	}
 }
 
-@PART[advancedFTLdriveMk2]:NEEDS[TweakScale]
+@PART[advancedFTLdriveMk2]:NEEDS[TweakScale]:FOR[FTLDriveContinued]
 {
 	MODULE
 	{
@@ -32,7 +32,7 @@ TWEAKSCALEEXPONENTS
 	}
 }
 
-@PART[advancedFTLdriveS1]:NEEDS[TweakScale]
+@PART[advancedFTLdriveS1]:NEEDS[TweakScale]:FOR[FTLDriveContinued]
 {
 	MODULE
 	{
@@ -42,7 +42,7 @@ TWEAKSCALEEXPONENTS
 	}
 }
 
-@PART[advancedFTLdriveS2]:NEEDS[TweakScale]
+@PART[advancedFTLdriveS2]:NEEDS[TweakScale]:FOR[FTLDriveContinued]
 {
 	MODULE
 	{
