--- a/GameData/FTLDriveContinued/Parts/CommunityTechTree_patch.cfg
+++ b/GameData/FTLDriveContinued/Parts/CommunityTechTree_patch.cfg
@@ -1,20 +1,20 @@
 
-@PART[ftlContBcnPlus]:NEEDS[CommunityTechTree]
+@PART[ftlContBcnPlus]:NEEDS[CommunityTechTree]:FOR[FTLDriveContinued]
 {
 	@TechRequired = highEnergyScience
 }
 
-@PART[advancedFTLdriveMk2]:NEEDS[CommunityTechTree]
+@PART[advancedFTLdriveMk2]:NEEDS[CommunityTechTree]:FOR[FTLDriveContinued]
 {
 	@TechRequired = appliedHighEnergyPhysics
 }
 
-@PART[advancedFTLdriveS1]:NEEDS[CommunityTechTree]
+@PART[advancedFTLdriveS1]:NEEDS[CommunityTechTree]:FOR[FTLDriveContinued]
 {
 	@TechRequired = appliedHighEnergyPhysics
 }
 
-@PART[advancedFTLdriveS2]:NEEDS[CommunityTechTree]
+@PART[advancedFTLdriveS2]:NEEDS[CommunityTechTree]:FOR[FTLDriveContinued]
 {
 	@TechRequired = ultraHighEnergyPhysics
 }
